--- a/TechChallenge.Web/Pages/Home.razor
+++ b/TechChallenge.Web/Pages/Home.razor
@@ -15,7 +15,7 @@
     <RadzenStack>
         <RadzenRow JustifyContent="JustifyContent.SpaceBetween" AlignItems="AlignItems.Center">
             <RadzenColumn>
-                <RadzenText Text="TechChallenge" TextStyle="TextStyle.H2" />
+                <RadzenText Text="TechChallenge 2" TextStyle="TextStyle.H2" />
                 <RadzenText Text="Fase 2 - Azure DevOps e Servless" TextStyle="TextStyle.Body1" />
             </RadzenColumn>
 
